--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/5hweta28/Network-traffic-classifier-using-C-RNN-/blob/main/cnn.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "**Network traffic classifier with convolutional and recurrent neural networks for Internet of Things**"
       ],
@@ -497,7 +507,7 @@
         "id": "88EfVhkIaaba",
         "outputId": "71b523f0-1409-4604-a052-bcf6293aa30d"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -577,7 +587,10 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "1Dm-iFCCrZuE8aYb-kY31qCPFJGL9p9vM",
+      "authorship_tag": "ABX9TyOZzy+H6e+gr2qcoEwFujag",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
